--- a/app/src/main/res/layout/activity_einkaufswagen.xml
+++ b/app/src/main/res/layout/activity_einkaufswagen.xml
@@ -30,18 +30,6 @@
         app:layout_constraintStart_toEndOf="@+id/btnadditem"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="450dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="53dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="314dp"
@@ -63,5 +51,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.017" />
+
+    <ListView
+        android:id="@+id/lvEinkauf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
