--- a/app/src/main/res/layout/activity_einkaufswagen.xml
+++ b/app/src/main/res/layout/activity_einkaufswagen.xml
@@ -9,7 +9,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnadditem"
-        android:layout_width="37dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -75,6 +75,7 @@
         android:layout_marginStart="13dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorAccent"
+        android:textColor="#ffffff"
         android:text="Einkaufen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -87,6 +88,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorAccent"
+        android:textColor="#ffffff"
         android:text="Einkaufen beendet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
